<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MyProfileFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/avatar"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <EditText
            android:id="@+id/fName"
            android:layout_width="302dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="First Name"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/lName"
            android:layout_width="307dp"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName" />

        <EditText
            android:id="@+id/stuID"
            android:layout_width="310dp"
            android:layout_height="59dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="Student ID"
            android:inputType="number"
            android:maxLength="9"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/dep"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stuID" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="312dp"
            android:layout_height="69dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <RadioButton
                android:id="@+id/CS"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dep1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/SIS"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DEP2"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/BIO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DEP3"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/Other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other"
                android:textColor="@android:color/black" />
        </RadioGroup>


        <Button
            android:id="@+id/button"
            android:layout_width="139dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="153dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/select_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>