<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DisplayProfileFragment">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personImage" />

        <ImageView
            android:id="@+id/personImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars[1]" />

        <TextView
            android:id="@+id/PersonName"
            android:layout_width="187dp"
            android:layout_height="33dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="sans-serif-black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/personImage" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/studentid"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/PersonID"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="sans-serif-black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/PersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="33dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/dept"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/PersonDept"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="sans-serif-black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/PersonID" />

        <Button
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/edit"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>